completed twitch embed and fixed overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 @import "../styles/typography.css";
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 h1,
 h3 {
   font-family: "Prime Regular";
